--- a/vin_web/src/Components/MainMenu/MainMenu.css
+++ b/vin_web/src/Components/MainMenu/MainMenu.css
@@ -17,6 +17,7 @@ button span {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    z-index: 9999;
     list-style: none;
   }
 
@@ -27,6 +28,7 @@ button span {
     margin-right: 20px;
     margin-left:10px;
     padding-right: 15px;
+    z-index: inherit;
   }
 
   .menu-items-link{
@@ -39,6 +41,7 @@ button span {
     cursor: pointer;
     width: 100%;
     border-radius: 5px;
+    z-index: inherit;
   }
 
   .menu-items-link a{
@@ -51,6 +54,7 @@ button span {
     cursor: pointer;
     border-radius: 5px;
     width: 100%;
+    z-index: inherit;
   }
 
   .menu-items-link a:hover {
@@ -64,6 +68,7 @@ button span {
     padding-right: 15px;
     border-radius: 5px;
     width: 100%;
+    z-index: inherit;
   }
   
   .menu-items a {
@@ -71,6 +76,7 @@ button span {
     font-size: inherit;
     color: inherit;
     text-decoration: none;
+    z-index: inherit;
   }
 
   .menu-items a:hover {
@@ -79,6 +85,7 @@ button span {
     color: inherit;
     text-decoration: none;
     background-color: rgb(141, 141, 141);;
+    z-index: inherit;
   }
   
   .menu-items button {
@@ -100,6 +107,7 @@ button span {
     font-size: inherit;
     border: none;
     background-color: rgb(143, 143, 143);
+    z-index: inherit;
     cursor: pointer;
     width: 100%;
   }
